force-app/main/default/objects/Sandbox_Details__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Details about this Sandbox Org. Populated by SandboxPostRefresh</description>
    <fields>
        <fullName>organizationId__c</fullName>
        <description>Org Id of this Sandbox</description>
        <inlineHelpText>Org Id of this Sandbox</inlineHelpText>
        <label>organizationId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sandboxId__c</fullName>
        <description>Id of Sandbox</description>
        <inlineHelpText>Id of Sandbox</inlineHelpText>
        <label>sandboxId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sandboxName__c</fullName>
        <description>Name of Sandbox</description>
        <inlineHelpText>Name of Sandbox</inlineHelpText>
        <label>sandboxName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Sandbox Details</label>
</CustomObject>